--- a/package.json
+++ b/package.json
@@ -3,102 +3,118 @@
   "license": "UNLICENSED",
   "vaadin": {
     "dependencies": {
-      "lit-element": "^2.2.1",
+      "lit-element": "2.3.1",
+      "@vaadin/router": "1.7.2",
       "@polymer/polymer": "3.2.0",
-      "@webcomponents/webcomponentsjs": "^2.2.10",
       "@vaadin/vaadin-grid": "5.7.5",
       "@vaadin/vaadin-icons": "4.3.1",
       "@vaadin/vaadin-split-layout": "4.3.0",
-      "@vaadin/vaadin-combo-box": "5.4.2",
-      "@vaadin/vaadin-core-shrinkwrap": "14.4.2",
+      "@vaadin/vaadin-combo-box": "5.3.0",
+      "@vaadin/vaadin-core-shrinkwrap": "17.0.9",
       "@vaadin/vaadin-upload": "4.4.0",
       "@vaadin/vaadin-dialog": "2.5.2",
-      "@vaadin/vaadin-select": "2.4.0",
+      "@vaadin/vaadin-select": "2.3.0",
       "@vaadin/vaadin-app-layout": "2.2.0",
       "@vaadin/vaadin-item": "2.3.0",
       "@vaadin/vaadin-notification": "1.6.0",
       "@vaadin/vaadin-progress-bar": "1.3.0",
-      "@vaadin/vaadin-date-time-picker": "1.4.0",
+      "@vaadin/vaadin-date-time-picker": "1.3.0",
       "@vaadin/vaadin-ordered-layout": "1.4.0",
       "@vaadin/vaadin-login": "1.2.0",
       "@vaadin/vaadin-button": "2.4.0",
-      "@vaadin/vaadin-date-picker": "4.4.1",
-      "@vaadin/vaadin-text-field": "2.8.1",
+      "@vaadin/vaadin-date-picker": "4.3.0",
+      "@vaadin/vaadin-text-field": "2.7.1",
       "@vaadin/vaadin-menu-bar": "1.2.0",
-      "@vaadin/vaadin-custom-field": "1.3.0",
+      "@vaadin/vaadin-custom-field": "1.2.0",
       "@vaadin/vaadin-form-layout": "2.3.0",
       "@vaadin/vaadin-accordion": "1.2.0",
       "@polymer/iron-list": "3.1.0",
       "@vaadin/vaadin-list-box": "1.4.0",
-      "@vaadin/vaadin-checkbox": "2.5.0",
+      "@vaadin/vaadin-checkbox": "2.4.0",
       "@vaadin/vaadin-details": "1.2.0",
       "@polymer/iron-icon": "3.0.1",
-      "@vaadin/vaadin-time-picker": "2.4.0",
+      "@vaadin/vaadin-time-picker": "2.3.0",
       "@vaadin/vaadin-context-menu": "4.5.0",
+      "@vaadin/vaadin-radio-button": "1.4.1",
       "@vaadin/vaadin-tabs": "3.2.0",
-      "@vaadin/vaadin-radio-button": "1.5.1",
       "@vaadin/vaadin-lumo-styles": "1.6.0",
       "@vaadin/vaadin-material-styles": "1.3.2"
     },
     "devDependencies": {
-      "webpack-babel-multi-target-plugin": "2.3.3",
-      "copy-webpack-plugin": "5.1.2",
       "compression-webpack-plugin": "4.0.1",
-      "raw-loader": "3.1.0",
+      "raw-loader": "4.0.0",
       "webpack-cli": "3.3.11",
+      "script-ext-html-webpack-plugin": "2.1.4",
+      "validator": "12.0.0",
+      "awesome-typescript-loader": "5.2.1",
+      "lit-html": "1.2.1",
+      "@types/validator": "10.11.3",
+      "copy-webpack-plugin": "5.1.2",
+      "lit-element": "2.3.1",
       "webpack": "4.42.0",
+      "html-webpack-plugin": "3.2.0",
       "chokidar": "^3.4.0",
+      "typescript": "3.8.3",
       "webpack-merge": "4.2.2",
       "webpack-dev-server": "3.11.0"
     },
-    "hash": "89c88b68d0081b8a8071c6943c6a25f30d18bed33dae9bafd7b0c2d4e52e2c06"
+    "hash": "235c93a3628f521e2a3d3debcaf3ceb913fc030dd90fddc94980c5b620a3eb44"
   },
   "dependencies": {
-    "lit-element": "^2.2.1",
+    "lit-element": "2.3.1",
+    "@vaadin/router": "1.7.2",
     "@polymer/polymer": "3.2.0",
-    "@webcomponents/webcomponentsjs": "^2.2.10",
+    "@vaadin/flow-frontend": "./target/flow-frontend",
+    "@vaadin/form": "./target/flow-frontend/form",
     "@vaadin/vaadin-grid": "5.7.5",
     "@vaadin/vaadin-icons": "4.3.1",
     "@vaadin/vaadin-split-layout": "4.3.0",
-    "@vaadin/vaadin-combo-box": "5.4.2",
-    "@vaadin/vaadin-core-shrinkwrap": "14.4.2",
+    "@vaadin/vaadin-combo-box": "5.3.0",
+    "@vaadin/vaadin-core-shrinkwrap": "17.0.9",
     "@vaadin/vaadin-upload": "4.4.0",
     "@vaadin/vaadin-dialog": "2.5.2",
-    "@vaadin/vaadin-select": "2.4.0",
+    "@vaadin/vaadin-select": "2.3.0",
     "@vaadin/vaadin-app-layout": "2.2.0",
     "@vaadin/vaadin-item": "2.3.0",
     "@vaadin/vaadin-notification": "1.6.0",
     "@vaadin/vaadin-progress-bar": "1.3.0",
-    "@vaadin/vaadin-date-time-picker": "1.4.0",
+    "@vaadin/vaadin-date-time-picker": "1.3.0",
     "@vaadin/vaadin-ordered-layout": "1.4.0",
     "@vaadin/vaadin-login": "1.2.0",
     "@vaadin/vaadin-button": "2.4.0",
-    "@vaadin/vaadin-date-picker": "4.4.1",
-    "@vaadin/vaadin-text-field": "2.8.1",
+    "@vaadin/vaadin-date-picker": "4.3.0",
+    "@vaadin/vaadin-text-field": "2.7.1",
     "@vaadin/vaadin-menu-bar": "1.2.0",
-    "@vaadin/vaadin-custom-field": "1.3.0",
+    "@vaadin/vaadin-custom-field": "1.2.0",
     "@vaadin/vaadin-form-layout": "2.3.0",
     "@vaadin/vaadin-accordion": "1.2.0",
     "@polymer/iron-list": "3.1.0",
     "@vaadin/vaadin-list-box": "1.4.0",
-    "@vaadin/vaadin-checkbox": "2.5.0",
+    "@vaadin/vaadin-checkbox": "2.4.0",
     "@vaadin/vaadin-details": "1.2.0",
     "@polymer/iron-icon": "3.0.1",
-    "@vaadin/vaadin-time-picker": "2.4.0",
+    "@vaadin/vaadin-time-picker": "2.3.0",
     "@vaadin/vaadin-context-menu": "4.5.0",
+    "@vaadin/vaadin-radio-button": "1.4.1",
     "@vaadin/vaadin-tabs": "3.2.0",
-    "@vaadin/vaadin-radio-button": "1.5.1",
     "@vaadin/vaadin-lumo-styles": "1.6.0",
     "@vaadin/vaadin-material-styles": "1.3.2"
   },
   "devDependencies": {
-    "webpack-babel-multi-target-plugin": "2.3.3",
-    "copy-webpack-plugin": "5.1.2",
     "compression-webpack-plugin": "4.0.1",
-    "raw-loader": "3.1.0",
+    "raw-loader": "4.0.0",
     "webpack-cli": "3.3.11",
+    "script-ext-html-webpack-plugin": "2.1.4",
+    "validator": "12.0.0",
+    "awesome-typescript-loader": "5.2.1",
+    "lit-html": "1.2.1",
+    "@types/validator": "10.11.3",
+    "copy-webpack-plugin": "5.1.2",
+    "lit-element": "2.3.1",
     "webpack": "4.42.0",
+    "html-webpack-plugin": "3.2.0",
     "chokidar": "^3.4.0",
+    "typescript": "3.8.3",
     "webpack-merge": "4.2.2",
     "webpack-dev-server": "3.11.0"
   }
