--- a/pom.xml
+++ b/pom.xml
@@ -1,14 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0"
-	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+		 xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-
 	<groupId>hu.kits</groupId>
 	<artifactId>kits-team</artifactId>
+    <name>KITS Team</name>
 	<version>0.0.1-SNAPSHOT</version>
-
-	<name>KITS Team</name>
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -17,7 +15,7 @@
 		<maven.compiler.source>14</maven.compiler.source>
 		<maven.compiler.target>14</maven.compiler.target>
 
-		<vaadin.version>14.4.2</vaadin.version>
+		<vaadin.version>17.0.9</vaadin.version>
 		<vaadin-install-nodejs>true</vaadin-install-nodejs>
 		<frontend-maven-plugin.nodeVersion>v13.2.0</frontend-maven-plugin.nodeVersion>
 		<jetty.version>9.4.27.v20200227</jetty.version>
@@ -148,9 +146,6 @@
 				<version>3.8.0</version>
 				<configuration>
 					<release>14</release>
-					<compilerArgs>
-						--enable-preview
-					</compilerArgs>
 				</configuration>
 			</plugin>
 			<plugin>
@@ -200,107 +195,34 @@
 
 	<profiles>
 		<profile>
-			<id>vaadin-install-nodejs</id>
-			<activation>
-				<activeByDefault>false</activeByDefault>
-				<property>
-					<name>vaadin-install-nodejs</name>
-				</property>
-			</activation>
-			<build>
-				<plugins>
-					<plugin>
-						<groupId>com.vaadin</groupId>
-						<artifactId>vaadin-maven-plugin</artifactId>
-						<version>${vaadin.version}</version>
-						<executions>
-							<execution>
-								<goals>
-									<goal>prepare-frontend</goal>
-									<goal>build-frontend</goal>
-								</goals>
-							</execution>
-						</executions>
-					</plugin>
-					<plugin>
-						<groupId>com.github.eirslett</groupId>
-						<artifactId>frontend-maven-plugin</artifactId>
-						<executions>
-							<execution>
-								<!-- optional: you don't really need execution ids, but it looks 
-									nice in your build log. -->
-								<id>install node and npm</id>
-								<goals>
-									<goal>install-node-and-npm</goal>
-								</goals>
-								<!-- optional: default phase is "generate-resources" -->
-								<phase>generate-resources</phase>
-							</execution>
-						</executions>
-						<configuration>
-							<nodeVersion>${frontend-maven-plugin.nodeVersion}</nodeVersion>
-							<!-- optional: with node version greater than 4.0.0 will use npm provided 
-								by node distribution -->
-							<!-- npmVersion>${frontend-maven-plugin.npmVersion}</npmVersion -->
-							<!-- optional: where to download node and npm from. Defaults to https://nodejs.org/dist/ -->
-							<!-- <downloadRoot>http://myproxy.example.org/nodejs/</downloadRoot> -->
-						</configuration>
-					</plugin>
-				</plugins>
-			</build>
-		</profile>
-		<profile>
-			<id>production</id>
-			<properties>
-				<vaadin.productionMode>true</vaadin.productionMode>
-			</properties>
-			<dependencies>
-				<dependency>
-					<groupId>com.vaadin</groupId>
-					<artifactId>flow-server-production-mode</artifactId>
-				</dependency>
-			</dependencies>
-			<build>
-				<plugins>
-					<plugin>
-						<groupId>com.vaadin</groupId>
-						<artifactId>vaadin-maven-plugin</artifactId>
-						<version>${vaadin.version}</version>
-						<executions>
-							<execution>
-								<goals>
-									<goal>prepare-frontend</goal>
-									<goal>build-frontend</goal>
-								</goals>
-							</execution>
-						</executions>
-					</plugin>
-					<plugin>
-						<groupId>com.github.eirslett</groupId>
-						<artifactId>frontend-maven-plugin</artifactId>
-						<executions>
-							<execution>
-								<!-- optional: you don't really need execution ids, but it looks 
-									nice in your build log. -->
-								<id>install node and npm</id>
-								<goals>
-									<goal>install-node-and-npm</goal>
-								</goals>
-								<!-- optional: default phase is "generate-resources" -->
-								<phase>generate-resources</phase>
-							</execution>
-						</executions>
-						<configuration>
-							<nodeVersion>${frontend-maven-plugin.nodeVersion}</nodeVersion>
-							<!-- optional: with node version greater than 4.0.0 will use npm provided 
-								by node distribution -->
-							<!-- npmVersion>${frontend-maven-plugin.npmVersion}</npmVersion -->
-							<!-- optional: where to download node and npm from. Defaults to https://nodejs.org/dist/ -->
-							<!-- <downloadRoot>http://myproxy.example.org/nodejs/</downloadRoot> -->
-						</configuration>
-					</plugin>
-				</plugins>
-			</build>
-		</profile>
+            <!-- Production mode is activated using -Pproduction -->
+            <id>production</id>
+            <properties>
+                <vaadin.productionMode>true</vaadin.productionMode>
+            </properties>
+            <dependencies>
+                <dependency>
+                    <groupId>com.vaadin</groupId>
+                    <artifactId>flow-server-production-mode</artifactId>
+                </dependency>
+            </dependencies>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>com.vaadin</groupId>
+                        <artifactId>vaadin-maven-plugin</artifactId>
+                        <version>${vaadin.version}</version>
+                        <executions>
+                            <execution>
+                                <goals>
+                                    <goal>build-frontend</goal>
+                                </goals>
+                                <phase>compile</phase>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
 	</profiles>
 </project>
