--- a/package.json
+++ b/package.json
@@ -45,18 +45,21 @@
       "raw-loader": "4.0.0",
       "webpack-cli": "3.3.11",
       "script-ext-html-webpack-plugin": "2.1.4",
-      "validator": "12.0.0",
+      "validator": "13.1.17",
       "awesome-typescript-loader": "5.2.1",
       "lit-html": "1.2.1",
-      "@types/validator": "10.11.3",
+      "@types/validator": "13.1.0",
       "copy-webpack-plugin": "5.1.2",
       "lit-element": "2.3.1",
       "webpack": "4.42.0",
       "html-webpack-plugin": "3.2.0",
       "chokidar": "^3.4.0",
-      "typescript": "3.8.3",
+      "typescript": "4.0.3",
       "webpack-merge": "4.2.2",
-      "webpack-dev-server": "3.11.0"
+      "webpack-dev-server": "3.11.0",
+      "css-loader": "4.2.1",
+      "lit-css-loader": "0.0.4",
+      "extract-loader": "5.1.0"
     },
     "hash": "235c93a3628f521e2a3d3debcaf3ceb913fc030dd90fddc94980c5b620a3eb44"
   },
@@ -105,17 +108,20 @@
     "raw-loader": "4.0.0",
     "webpack-cli": "3.3.11",
     "script-ext-html-webpack-plugin": "2.1.4",
-    "validator": "12.0.0",
+    "validator": "13.1.17",
     "awesome-typescript-loader": "5.2.1",
     "lit-html": "1.2.1",
-    "@types/validator": "10.11.3",
+    "@types/validator": "13.1.0",
     "copy-webpack-plugin": "5.1.2",
     "lit-element": "2.3.1",
     "webpack": "4.42.0",
     "html-webpack-plugin": "3.2.0",
     "chokidar": "^3.4.0",
-    "typescript": "3.8.3",
+    "typescript": "4.0.3",
     "webpack-merge": "4.2.2",
-    "webpack-dev-server": "3.11.0"
+    "webpack-dev-server": "3.11.0",
+    "css-loader": "4.2.1",
+    "lit-css-loader": "0.0.4",
+    "extract-loader": "5.1.0"
   }
 }
