--- a/pom.xml
+++ b/pom.xml
@@ -45,10 +45,10 @@
 		</dependency>
 
 		<dependency>
-			<groupId>javax.mail</groupId>
-			<artifactId>mail</artifactId>
-			<version>1.4.7</version>
-		</dependency>
+            <groupId>com.sendgrid</groupId>
+            <artifactId>sendgrid-java</artifactId>
+            <version>4.7.1</version>
+        </dependency>
 
 		<dependency>
 			<groupId>org.jdbi</groupId>
