--- a/package.json
+++ b/package.json
@@ -4,46 +4,49 @@
   "vaadin": {
     "dependencies": {
       "lit-element": "2.3.1",
-      "@vaadin/router": "1.7.2",
+      "@vaadin/router": "1.7.4",
       "@polymer/polymer": "3.2.0",
-      "@vaadin/vaadin-grid": "5.7.5",
+      "@vaadin/vaadin-grid": "5.7.7",
       "@vaadin/vaadin-icons": "4.3.1",
       "@vaadin/vaadin-split-layout": "4.3.0",
-      "@vaadin/vaadin-combo-box": "5.3.0",
-      "@vaadin/vaadin-core-shrinkwrap": "17.0.9",
-      "@vaadin/vaadin-upload": "4.4.0",
+      "@vaadin/vaadin-combo-box": "5.4.6",
+      "@vaadin/vaadin-core-shrinkwrap": "18.0.1",
+      "@vaadin/vaadin-upload": "4.4.1",
       "@vaadin/vaadin-dialog": "2.5.2",
-      "@vaadin/vaadin-select": "2.3.0",
+      "@vaadin/vaadin-select": "2.4.0",
       "@vaadin/vaadin-app-layout": "2.2.0",
       "@vaadin/vaadin-item": "2.3.0",
       "@vaadin/vaadin-notification": "1.6.0",
       "@vaadin/vaadin-progress-bar": "1.3.0",
-      "@vaadin/vaadin-date-time-picker": "1.3.0",
+      "@vaadin/vaadin-date-time-picker": "1.4.0",
       "@vaadin/vaadin-ordered-layout": "1.4.0",
       "@vaadin/vaadin-login": "1.2.0",
       "@vaadin/vaadin-button": "2.4.0",
-      "@vaadin/vaadin-date-picker": "4.3.0",
-      "@vaadin/vaadin-text-field": "2.7.1",
+      "@vaadin/vaadin-date-picker": "4.4.1",
+      "@vaadin/vaadin-text-field": "2.8.2",
       "@vaadin/vaadin-menu-bar": "1.2.0",
-      "@vaadin/vaadin-custom-field": "1.2.0",
+      "@vaadin/vaadin-custom-field": "1.3.0",
       "@vaadin/vaadin-form-layout": "2.3.0",
       "@vaadin/vaadin-accordion": "1.2.0",
       "@polymer/iron-list": "3.1.0",
       "@vaadin/vaadin-list-box": "1.4.0",
-      "@vaadin/vaadin-checkbox": "2.4.0",
+      "@vaadin/vaadin-checkbox": "2.5.0",
       "@vaadin/vaadin-details": "1.2.0",
       "@polymer/iron-icon": "3.0.1",
-      "@vaadin/vaadin-time-picker": "2.3.0",
+      "@vaadin/vaadin-time-picker": "2.4.0",
       "@vaadin/vaadin-context-menu": "4.5.0",
-      "@vaadin/vaadin-radio-button": "1.4.1",
+      "@vaadin/vaadin-radio-button": "1.5.1",
       "@vaadin/vaadin-tabs": "3.2.0",
       "@vaadin/vaadin-lumo-styles": "1.6.0",
-      "@vaadin/vaadin-material-styles": "1.3.2"
+      "@vaadin/vaadin-material-styles": "1.3.2",
+      "@vaadin/vaadin-avatar": "1.0.1",
+      "construct-style-sheets-polyfill": "3.0.4",
+      "lit": "2.0.0"
     },
     "devDependencies": {
       "compression-webpack-plugin": "4.0.1",
       "raw-loader": "4.0.0",
-      "webpack-cli": "3.3.11",
+      "webpack-cli": "3.3.12",
       "script-ext-html-webpack-plugin": "2.1.4",
       "validator": "13.1.17",
       "awesome-typescript-loader": "5.2.1",
@@ -51,62 +54,75 @@
       "@types/validator": "13.1.0",
       "copy-webpack-plugin": "5.1.2",
       "lit-element": "2.3.1",
-      "webpack": "4.42.0",
-      "html-webpack-plugin": "3.2.0",
-      "chokidar": "^3.4.0",
-      "typescript": "4.0.3",
+      "webpack": "4.46.0",
+      "html-webpack-plugin": "4.5.1",
+      "chokidar": "^3.5.0",
+      "typescript": "4.3.3",
       "webpack-merge": "4.2.2",
       "webpack-dev-server": "3.11.0",
       "css-loader": "4.2.1",
-      "lit-css-loader": "0.0.4",
-      "extract-loader": "5.1.0"
+      "lit-css-loader": "0.1.0",
+      "extract-loader": "5.1.0",
+      "file-loader": "6.2.0",
+      "fork-ts-checker-webpack-plugin": "6.2.1",
+      "extra-watch-webpack-plugin": "1.0.3",
+      "glob": "7.1.6",
+      "loader-utils": "2.0.0",
+      "workbox-core": "6.2.0",
+      "ts-loader": "8.0.12",
+      "workbox-precaching": "6.2.0",
+      "webpack-manifest-plugin": "3.0.0",
+      "workbox-webpack-plugin": "6.2.0"
     },
-    "hash": "235c93a3628f521e2a3d3debcaf3ceb913fc030dd90fddc94980c5b620a3eb44"
+    "hash": "d21ef3a1f723168b61e00c80def7d19cf96a24fab82e1194808759ef5e08221f"
   },
   "dependencies": {
     "lit-element": "2.3.1",
-    "@vaadin/router": "1.7.2",
+    "@vaadin/router": "1.7.4",
     "@polymer/polymer": "3.2.0",
     "@vaadin/flow-frontend": "./target/flow-frontend",
     "@vaadin/form": "./target/flow-frontend/form",
-    "@vaadin/vaadin-grid": "5.7.5",
+    "@vaadin/vaadin-grid": "5.7.7",
     "@vaadin/vaadin-icons": "4.3.1",
     "@vaadin/vaadin-split-layout": "4.3.0",
-    "@vaadin/vaadin-combo-box": "5.3.0",
-    "@vaadin/vaadin-core-shrinkwrap": "17.0.9",
-    "@vaadin/vaadin-upload": "4.4.0",
+    "@vaadin/vaadin-combo-box": "5.4.6",
+    "@vaadin/vaadin-core-shrinkwrap": "18.0.1",
+    "@vaadin/vaadin-upload": "4.4.1",
     "@vaadin/vaadin-dialog": "2.5.2",
-    "@vaadin/vaadin-select": "2.3.0",
+    "@vaadin/vaadin-select": "2.4.0",
     "@vaadin/vaadin-app-layout": "2.2.0",
     "@vaadin/vaadin-item": "2.3.0",
     "@vaadin/vaadin-notification": "1.6.0",
     "@vaadin/vaadin-progress-bar": "1.3.0",
-    "@vaadin/vaadin-date-time-picker": "1.3.0",
+    "@vaadin/vaadin-date-time-picker": "1.4.0",
     "@vaadin/vaadin-ordered-layout": "1.4.0",
     "@vaadin/vaadin-login": "1.2.0",
     "@vaadin/vaadin-button": "2.4.0",
-    "@vaadin/vaadin-date-picker": "4.3.0",
-    "@vaadin/vaadin-text-field": "2.7.1",
+    "@vaadin/vaadin-date-picker": "4.4.1",
+    "@vaadin/vaadin-text-field": "2.8.2",
     "@vaadin/vaadin-menu-bar": "1.2.0",
-    "@vaadin/vaadin-custom-field": "1.2.0",
+    "@vaadin/vaadin-custom-field": "1.3.0",
     "@vaadin/vaadin-form-layout": "2.3.0",
     "@vaadin/vaadin-accordion": "1.2.0",
     "@polymer/iron-list": "3.1.0",
     "@vaadin/vaadin-list-box": "1.4.0",
-    "@vaadin/vaadin-checkbox": "2.4.0",
+    "@vaadin/vaadin-checkbox": "2.5.0",
     "@vaadin/vaadin-details": "1.2.0",
     "@polymer/iron-icon": "3.0.1",
-    "@vaadin/vaadin-time-picker": "2.3.0",
+    "@vaadin/vaadin-time-picker": "2.4.0",
     "@vaadin/vaadin-context-menu": "4.5.0",
-    "@vaadin/vaadin-radio-button": "1.4.1",
+    "@vaadin/vaadin-radio-button": "1.5.1",
     "@vaadin/vaadin-tabs": "3.2.0",
     "@vaadin/vaadin-lumo-styles": "1.6.0",
-    "@vaadin/vaadin-material-styles": "1.3.2"
+    "@vaadin/vaadin-material-styles": "1.3.2",
+    "@vaadin/vaadin-avatar": "1.0.1",
+    "construct-style-sheets-polyfill": "3.0.4",
+    "lit": "2.0.0"
   },
   "devDependencies": {
     "compression-webpack-plugin": "4.0.1",
     "raw-loader": "4.0.0",
-    "webpack-cli": "3.3.11",
+    "webpack-cli": "3.3.12",
     "script-ext-html-webpack-plugin": "2.1.4",
     "validator": "13.1.17",
     "awesome-typescript-loader": "5.2.1",
@@ -114,14 +130,24 @@
     "@types/validator": "13.1.0",
     "copy-webpack-plugin": "5.1.2",
     "lit-element": "2.3.1",
-    "webpack": "4.42.0",
-    "html-webpack-plugin": "3.2.0",
-    "chokidar": "^3.4.0",
-    "typescript": "4.0.3",
+    "webpack": "4.46.0",
+    "html-webpack-plugin": "4.5.1",
+    "chokidar": "^3.5.0",
+    "typescript": "4.3.3",
     "webpack-merge": "4.2.2",
     "webpack-dev-server": "3.11.0",
     "css-loader": "4.2.1",
-    "lit-css-loader": "0.0.4",
-    "extract-loader": "5.1.0"
+    "lit-css-loader": "0.1.0",
+    "extract-loader": "5.1.0",
+    "file-loader": "6.2.0",
+    "fork-ts-checker-webpack-plugin": "6.2.1",
+    "extra-watch-webpack-plugin": "1.0.3",
+    "glob": "7.1.6",
+    "loader-utils": "2.0.0",
+    "workbox-core": "6.2.0",
+    "ts-loader": "8.0.12",
+    "workbox-precaching": "6.2.0",
+    "webpack-manifest-plugin": "3.0.0",
+    "workbox-webpack-plugin": "6.2.0"
   }
 }
